--- a/index.html/singup.css
+++ b/index.html/singup.css
@@ -61,7 +61,7 @@ main {
 main .contaniner {
     margin: 30px;
     width: 50%;
-    height: 120vh;
+    height: 100%;
     border: 3px solid #f2f7f2;
     border-radius: 10px;
     display: flex;
@@ -461,8 +461,9 @@ main .contaniner .check-box .content-box-check-box .check-box-heading h3 {
 }
 
 main .contaniner .box .create-account {
-    margin: 30px;
+    margin: 3vw 0px ;
     width: 90%;
+    /* height: 100%; */
 
 }
 
@@ -471,7 +472,7 @@ main .contaniner .box .create-account .green-btn {
     cursor: pointer;
     margin: 0px 20px;
     background-color: green;
-    padding: 10px 14.5rem;
+    padding:1vw 9vw;
     border-radius: 20px;
 }
 
