--- a/index.html/style.css
+++ b/index.html/style.css
@@ -1371,7 +1371,7 @@ main .big-container .section-four .green-contanier .right-side {
     width: 45%;
     /* background-color: red; */
 
-    background: url(/index.html/images/girl\ using\ laptop.jpg);
+    background: url(/index.html/images/man\ using\ laptop.jpg );
     background-size: cover;
 
     background-position: center;
@@ -1711,7 +1711,7 @@ main .big-container .section-seven .container-box-section-eight .right-side-sect
     width: 50%;
     /* margin-left: 1rem; */
     color: white;
-   padding: 2vw 0px;
+    padding: 2vw 0px;
 
 }
 
@@ -1720,7 +1720,7 @@ main .big-container .section-seven .container-box-section-eight .right-side-sect
 }
 
 main .big-container .section-seven .container-box-section-eight .right-side-section-eight .content-box-section-eight .first-heading {
-   
+
     font-size: 1.8vw;
 }
 
@@ -1778,7 +1778,7 @@ main .big-container .section-seven .container-box-section-eight .right-side-sect
 }
 
 main .big-container .section-seven .container-box-section-eight .right-side-section-eight .content-box-section-eight .button-box-section-eight .btn-white-section-eight {
-    
+
     padding: 0.7vw 1vw;
     background-color: #fff;
     border-radius: 20px;
@@ -1823,7 +1823,7 @@ main .big-container .section-eight .container-nine {
 
 main .big-container .section-eight .main-heading-container-nine {
     width: 45%;
-    
+
     padding: 0.5vw 0.6vw;
     scrollbar-width: none;
     /* background-color: #bc511b; */
@@ -1881,10 +1881,10 @@ main .big-container .section-eight .container-nine .three-boxs-section-nine .rig
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .green-box {
     min-width: 45%;
-   
+
     background-color: #13544e;
     border-radius: 10px;
-    padding:  2vw;
+    padding: 2vw;
 
     /* margin-right: 4rem; */
 }
@@ -1895,12 +1895,12 @@ main .big-container .section-eight .container-nine .three-boxs-section-nine .gre
 }
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .green-box .content-box-green-box .top-heading-green-box {
-   padding: 0px 2vw;
+    padding: 0px 2vw;
 }
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .green-box .content-box-green-box .top-heading-green-box h2 {
     font-weight: 400;
-    font-size : 3vw;
+    font-size: 3vw;
 }
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .green-box .content-box-green-box .para {
@@ -1970,7 +1970,7 @@ main .big-container .section-eight .container-nine .three-boxs-section-nine .gre
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .orange-box {
     min-width: 45%;
-   
+
     background-color: #bc511b;
     border-radius: 10px;
     padding: 2vw;
@@ -2058,11 +2058,11 @@ main .big-container .section-eight .container-nine .three-boxs-section-nine .ora
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .black-box {
     min-width: 45%;
-   
+
     background-color: rgb(8, 8, 8);
     border-radius: 10px;
     display: flex;
-    
+
 }
 
 main .big-container .section-eight .container-nine .three-boxs-section-nine .black-box .left-side-black-box {
@@ -2222,20 +2222,25 @@ footer .footer-contanir .footer-content-box {
     width: 100%;
     height: 70%;
     display: flex;
-    justify-content: space-around;
-    /* margin-top: 3rem; */
+    margin: 2vw 0px;
     /* align-items: center; */
     position: relative;
-    padding: 0px 2vw;
+    padding: 0px 4vw;
+    gap: 14%;
 }
 
 footer .footer-contanir .footer-content-box .list {
-    /* margin-top: 5rem; */
-    padding: 2vw;
+    display: flex;
+  
+    
 }
 
 footer .footer-contanir .footer-content-box .list ul li {
-    padding: 5px 0px;
+    padding: 0.5vw 0px;
+    display: flex;
+    justify-content: center;
+    
+    
 }
 
 footer .footer-contanir .footer-content-box .list ul li a {
@@ -2249,99 +2254,107 @@ footer .footer-contanir .footer-content-box .list ul li a {
 footer .footer-contanir .second-links {
     display: flex;
     justify-content: space-between;
-    padding: 0px 6vw;
+    padding: 0px 4vw;
+
 
 }
 
 footer .footer-contanir .second-links .social-media-links {
     display: flex;
-    position: relative;
+    align-items: center;
+    width: 50%;
+    gap: 4%;
+
+
 
 }
 
-footer .footer-contanir .second-links .social-media-links h3 {
-    color: white;
-    margin-left: 0.4vw;
-    font-weight: 700;
+footer .footer-contanir .second-links .social-media-links h3{
+    font-size: 1.2vw;
 }
 
-footer .footer-contanir .second-links .social-media-links .icon-box {
-    position: absolute;
-    left: 130px;
+footer .footer-contanir .second-links .social-media-links .icon-box{
     display: flex;
-    top: -5px;
-
+    align-items: center;
+    
+}
+footer .footer-contanir .second-links .social-media-links .icon-box i{
+    padding: 0.8vw;
+    border-radius: 50%;
 }
 
-footer .footer-contanir .second-links .social-media-links .icon-box i {
+
+footer .footer-contanir .second-links .social-media-links .icon-box a{
+    padding: 0px 1vw;
     font-size: 1.3vw;
-    margin: 0px 0.5vw;
-    border: 2px solid white;
-    border-radius: 50%;
-    padding: 10px;
 
 }
 
 footer .footer-contanir .second-links .social-media-links .icon-box i:hover {
     background-color: #f9f9f986;
 }
-
 footer .footer-contanir .second-links .mobile-app {
     display: flex;
-    position: relative;
+    align-items: center;
+    width: 50%;
+    gap: 4%;
+    justify-content: end;
+
+
 
 }
 
-footer .footer-contanir .second-links .mobile-app h3 {
-    color: white;
-    margin-right: 8vw;
+footer .footer-contanir .second-links .mobile-app h3{
+    font-size: 1.2vw;
 }
 
-footer .footer-contanir .second-links .mobile-app .icon-box {
+footer .footer-contanir .second-links .mobile-app .icon-box{
     display: flex;
-    position: absolute;
-    right: -10px;
-    top: -5px;
+    align-items: center;
 }
 
-footer .footer-contanir .second-links .mobile-app .icon-box i {
-    font-size: 1.3rem;
-    margin: 0px 0.5rem;
-    border: 2px solid white;
-    border-radius: 50%;
-    padding: 10px;
 
+footer .footer-contanir .second-links .mobile-app .icon-box a{
+    padding: 0px 1vw;
+    font-size: 1.3vw;
 }
 
 footer .footer-contanir .second-links .mobile-app .icon-box i:hover {
     background-color: #f9f9f986;
 }
 
+
 footer .footer-contanir hr {
-    margin: 1.5rem 3.4rem;
+    margin: 1.3vw 3.4vw;
 }
 
 footer .footer-contanir .copy-right {
-    margin: 1rem 3.3rem;
+   padding: 0px 2vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 footer .footer-contanir .copy-right ul {
     display: flex;
+    gap: 9%;
+    width: 100%;
 }
 
 footer .footer-contanir .copy-right ul li {
-    font-size: 0.9rem;
+    font-size: 0.7vw;
     color: rgb(250, 248, 248);
+   
+   
 }
 
 footer .footer-contanir .copy-right ul li a {
-    padding: 0px 1rem;
+    /* padding: 0px 1vw; */
     color: rgb(238, 238, 238);
-    font-size: 0.8rem;
-    margin: 0px 1rem;
+    font-size: 0.8vw;
+   
+   
 
 }
 
