--- a/index.html/style.css
+++ b/index.html/style.css
@@ -2213,7 +2213,7 @@ footer .footer-contanir {
     padding: 1vw;
     width: 100%;
     height: 100%;
-    background-color: rgb(10, 108, 255);
+    background-color: black;
     border-radius: 8px;
     /* color: black; */
 }
@@ -2271,6 +2271,7 @@ footer .footer-contanir .second-links .social-media-links {
 
 footer .footer-contanir .second-links .social-media-links h3{
     font-size: 1.2vw;
+    color: #f0eeee;
 }
 
 footer .footer-contanir .second-links .social-media-links .icon-box{
@@ -2306,6 +2307,7 @@ footer .footer-contanir .second-links .mobile-app {
 
 footer .footer-contanir .second-links .mobile-app h3{
     font-size: 1.2vw;
+    color: white;
 }
 
 footer .footer-contanir .second-links .mobile-app .icon-box{
