--- a/index.html/style.css
+++ b/index.html/style.css
@@ -1371,7 +1371,7 @@ main .big-container .section-four .green-contanier .right-side {
     width: 45%;
     /* background-color: red; */
 
-    background: url(/index.html/images/man\ using\ laptop.jpg );
+    background: url(./index.html/images/man\ using\ laptop.jpg );
     background-size: cover;
 
     background-position: center;
@@ -1389,7 +1389,7 @@ main .big-container .section-five {
 main .big-container .section-five .hero {
     width: 100%;
 
-    background: url(/index.html//images/find-talent-2x.jpg);
+    background: url(./index.html//images/find-talent-2x.jpg);
     background-size: cover;
     border-radius: 8px;
 
@@ -1701,7 +1701,7 @@ main .big-container .section-seven .container-box-section-eight .left-side-secti
 
 main .big-container .section-seven .container-box-section-eight .left-side-section-eight .img {
     height: 100%;
-    background: url(/index.html/images/girl\ using\ laptop.jpg);
+    background: url(./index.html/images/girl\ using\ laptop.jpg);
     background-position: center;
     background-size: cover
 }
