--- a/index.html/style.css
+++ b/index.html/style.css
@@ -2480,7 +2480,7 @@ footer .footer-contanir .copy-right ul li a:hover {
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    background: url(/images/girl\ using\ laptop.jpg2.jpeg);
+    background: url(https://i.pngimg.me/thumb/f/720/4620167323582464.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
