--- a/index.html/style.css
+++ b/index.html/style.css
@@ -2517,18 +2517,24 @@ footer .footer-contanir .copy-right ul li a:hover {
 }
 
 .main-enterprice .big-container .section-two .pink-container .left-side-pink-container h3 {
-    font-size: 2rem;
+    font-size: 2vw;
     font-weight: 600;
-    margin-bottom: 4rem;
+   
 }
 
 .main-enterprice .big-container .section-two .pink-container .left-side-pink-container .small-btn {
     /* margin-top: 4rem; */
     background-color: white;
-    padding: 8px 15px;
+    padding: 1vw 1.2vw;
     border-radius: 20px;
     cursor: pointer;
     /* margin-right: 6rem; */
+    margin:  2vw 0px;
+    border: none;
+}
+
+.main-enterprice .big-container .section-two .pink-container .left-side-pink-container .small-btn a {
+    font-size: 1vw;
 }
 
 .main-enterprice .big-container .section-two .pink-container .right-side-pink-container {
@@ -2543,7 +2549,7 @@ footer .footer-contanir .copy-right ul li a:hover {
 .main-enterprice .big-container .section-two .pink-container .right-side-pink-container .img {
     width: 100%;
     height: 100%;
-    background: url(/index.html/images/girl\ using\ laptop.jpg);
+    background: url(https://media.istockphoto.com/id/1480380947/photo/modern-woman-using-laptop.webp?b=1&s=170667a&w=0&k=20&c=3fUzzYJptl5ugJ84uR2kLpEjVupgmSpI-DbIJaiUReU=);
     background-position: center;
     background-size: cover;
 }
@@ -2555,14 +2561,14 @@ footer .footer-contanir .copy-right ul li a:hover {
 .development-main {
     width: 100%;
     height: 100%;
-    margin: 2rem 0px;
+    margin: 2vw 0px;
     /* border: 2px solid black; */
 }
 
 .development-main .big-container {
     width: 100%;
     height: 100%;
-    padding: 0px 1rem;
+    padding: 0px 1vw;
     /* margin: 2rem; */
     /* border: 2px solid black; */
     /* background-color: #10eb31; */
@@ -2571,15 +2577,17 @@ footer .footer-contanir .copy-right ul li a:hover {
 .development-main .big-container .green-box-development-main {
     width: 100%;
     /* height: 100vh; */
+    
     background-color: #14a800;
     border-radius: 10px;
     display: flex;
-    height: 100vh;
+    height: 100%;
     justify-content: space-between;
 }
 
 .development-main .big-container .green-box-development-main .left-side-development-main {
     width: 40%;
+    padding: 2vw 0px;
     /* margin: 1rem 2rem; */
 }
 
@@ -2591,30 +2599,37 @@ footer .footer-contanir .copy-right ul li a:hover {
 
 .development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .main-heading-Dm {
     width: 100%;
-    padding: 1rem 0px;
-    line-height: 50px;
+    padding: 1vw 0px;
+    line-height: 2.5vw;
 }
 
 .development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .main-heading-Dm h3 {
-    font-size: 3.6rem;
+    font-size: 3.6vw;
     color: white;
 }
 
 .development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .para-Dm {
-    margin: 1rem 0px 3rem 0px;
+    margin: 2vw 0px 3vw;
     width: 90%;
 }
 
 .development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .para-Dm p {
-    font-size: 1.1rem;
+    font-size: 1.1vw;
     color: white;
 }
 
 .development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .small-white-btn {
-    padding: 12px 20px;
+    padding: 1vw 1.2vw;
+    margin: 10vw 0px;
     cursor: pointer;
     background-color: white;
     border-radius: 20px;
+    border: none;
+    outline: none;
+}
+
+.development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .small-white-btn a {
+    font-size: 1.2vw;
 }
 
 .development-main .big-container .green-box-development-main .left-side-development-main .content-box-left-side-Dm .small-white-btn:hover {
@@ -2626,11 +2641,15 @@ footer .footer-contanir .copy-right ul li a:hover {
 }
 
 .development-main .big-container .green-box-development-main .right-side-development-main {
-    width: 40%;
-    height: 100%;
-    background: url(/index.html//images/girl\ using\ laptop.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    width: 50%;
     border-radius: 10px;
+}
+
+.development-main .big-container .green-box-development-main .right-side-development-main .img{
+    width: 100%;
+    height: 100%;
+    background: url(https://t4.ftcdn.net/jpg/02/74/98/79/360_F_274987908_Ge3HcfM5sT43cscfC9LeM82Ss3qqDVjJ.jpg);
+    background-repeat: no-repeat;
+   background-size: cover;
+    background-position: center;
 }
